<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context="com.example.jordanfalcon.tipcalculatorproject4.MainActivity">

    <!-- Edit Amount view -->
    <EditText
        android:id="@+id/editText_BillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:inputType="number"
        android:padding="@dimen/padding_textView_default"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@color/backgroundEnterAmount"
        android:hint="0.0"
        />

    <TextView
        android:id="@+id/textView_BillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_row="0"
        android:background="@color/backgroundEnterAmount"
        android:hint="@string/textView_billAmount"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"

        />

    <!-- Seekbar view -->
    <SeekBar
        android:id="@+id/tipSeekBar"
        android:layout_height="50dp"
        android:layout_gravity="fill_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/margin_normal"
        android:layout_row="3"
        android:max="100"
        android:progress="15"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView_tipSeekBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_row="3"
        android:hint="@integer/textView_tipAmount"
        android:labelFor="@+id/tipSeekBar"
        android:padding="@dimen/padding_textView_default"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <!-- Tip percentage view -->
    <TextView
        android:id="@+id/textView_TipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:background="@color/backgroundTextViews"
        android:labelFor="@+id/tipSeekBar"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView_TipAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_row="4"
        android:hint="@string/textView_tipAmount"
        android:labelFor="@+id/textView_TipAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <!-- Total amount view -->
    <TextView
        android:id="@+id/textView_TotalAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:hint="@string/textView_totalAmount"
        android:labelFor="@+id/tipSeekBar"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/textView_TotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:background="@color/backgroundTextViews"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        />

    <!-- Per Person amount view -->
    <TextView
        android:id="@+id/textView_PerPersonAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:hint="@string/PerPersonAmount"
        android:labelFor="@+id/textView_PerPersonAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/textView_PerPersonAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:background="@color/backgroundTextViews"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        />

    <Spinner
        android:id="@+id/tipSpinner"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tipSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_column="0"
        android:labelFor="@+id/tipSpinner"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:hint="@string/tipSpinnerLabel"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipRadioLabel"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_column="0"
        android:labelFor="@+id/tipRadioGroup"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:hint="@string/tipRadioLabel"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tipRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rounding_no"
        android:layout_row="2"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:id="@+id/rounding_no"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/no" />

        <RadioButton
            android:id="@+id/rounding_tip"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tip" />

        <RadioButton
            android:id="@+id/rounding_total"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:onClick="onRadioButtonClicked"
            android:text="@string/total" />
    </RadioGroup>


</GridLayout>
